Finished table resize

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -16,6 +16,7 @@
    }
 
    .row-info {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -31,6 +32,7 @@
    }
 
    .column {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -59,6 +61,34 @@
          border: none;
          outline: 2px solid #3c74ff;
          z-index: 2;
+      }
+   }
+
+   .col-resize, .row-resize {
+      position: absolute;
+      opacity: 0;
+      background: #3c74ff;
+      right: 0;
+      bottom: 0;
+      z-index: 1000;
+      &:hover {
+         opacity: 1 !important;
+      }
+   }
+
+   .col-resize {
+      top: 0;
+      width: 3px;
+      &:hover {
+         cursor: col-resize;
+      }
+   }
+
+   .row-resize {
+      left: 0;
+      height: 3px;
+      &:hover {
+         cursor: row-resize;
       }
    }
 }
